# sha256

./: .gitignore  CMakeLists.txt  README.md
include/: sha256.h
src/: sha256.cpp
